--- a/www/index.html
+++ b/www/index.html
@@ -22,17 +22,18 @@
     <script src="js/app.js"></script>
   </head>
   <body ng-app="starter">
-
+    
+    <div class="move-box"></div>
     <ion-pane ng-controller="MainCtrl">
       <ion-slide-box class="box" on-slide-changed="slideHasChanged($index)">
         <ion-slide>
-          <div class="box blue"><h1>BLUE</h1></div>
+          <div class="box blue"></div>
         </ion-slide>
         <ion-slide>
-          <div class="box yellow"><h1>YELLOW</h1></div>
+          <div class="box yellow"></div>
         </ion-slide>
         <ion-slide>
-          <div class="box pink"><h1>PINK</h1></div>
+          <div class="box pink"></div>
         </ion-slide>
       </ion-slide-box>
     </ion-pane>
